--- a/src/main/resources/templates/admin_pastproducts.html
+++ b/src/main/resources/templates/admin_pastproducts.html
@@ -71,8 +71,8 @@
                 <td data-th-text="${product.articleNumber}"></td>
                 <td data-th-text="${product.EANCode}"></td>
                 <td data-th-text="${product.articleName}"></td>
-                <td data-th-text="${product.quantity}"></td>
-                <td data-th-text="${product.value}"></td>
+                <td data-th-text="${product.quantity}+' '+db"></td>
+                <td data-th-text="${product.value}+' '+Ft"></td>
                 <td data-th-text="${product.supplier}"></td>
                 <td data-th-text="${product.year}"></td>
 
