--- a/src/main/resources/templates/admin_upload.html
+++ b/src/main/resources/templates/admin_upload.html
@@ -44,7 +44,7 @@
     </nav>
 </header>
 <body>
-<div class="container-back">
+<div class="container-upload">
     <form data-th-action="@{/admin/upload}" method="post" data-th-object="${newProduct}">
         <table>
             <tr>
