--- a/src/main/resources/templates/userprofile.html
+++ b/src/main/resources/templates/userprofile.html
@@ -50,7 +50,7 @@
 <body>
 <div class="container-profile">
     <div class="container-income_inside">
-        <h1>Adataid:</h1>
+        <h1>Adatai:</h1>
 
         <table>
             <tr>
